snapshots/edgehog_device_runtime__file_transfer__request__tests__encoding_from_str_2.snap
---
source: src/file_transfer/request/mod.rs
expression: Hexdump(buf)
---
Length: 1 (0x1) bytes
0000: | 0000 0001 | (0x01) '.'
