snapshots/edgehog_device_runtime__file_transfer__request__tests__job_tag_roundtrip_0.snap
---
source: src/file_transfer/request/mod.rs
expression: "format!(\"{value:?} = {}\", buf)"
---
Download = 0
